Bug 99350 - libdrm-2.4.74/xf86drmMode.c:904:15: warning: dereferencing type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing]
Summary: libdrm-2.4.74/xf86drmMode.c:904:15: warning: dereferencing type-punned pointe...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: libdrm (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL: https://bugs.gentoo.org/show_bug.cgi?...
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-10 19:01 UTC by Matthew Thode
Modified: 2017-01-18 07:56 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Matthew Thode 2017-01-10 19:01:00 UTC
not much to say other than it fails to work on some stricter QA checks
Comment 1 Thierry Reding 2017-01-18 07:56:31 UTC
This should be fixed by the following commit that I just pushed to master:

commit ecc2a097294dcc773dbe5e2a989f180bedb89b69
Author: Thierry Reding <treding@nvidia.com>
Date:   Mon Apr 13 11:36:59 2015 +0200

    xf86drm: Fix type-punned pointer build warning
    
          CC       libdrm_la-xf86drmMode.lo
        ../xf86drmMode.c: In function 'drmHandleEvent':
        ../xf86drmMode.c:854:15: warning: dereferencing type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing]
           e = (struct drm_event *)(&buffer[i]);
                       ^
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=99350
    Reviewed-by: Emil Velikov <emil.velikov@collabora.com>
    Signed-off-by: Thierry Reding <treding@nvidia.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.